--- a/views/gestion/index_e.html
+++ b/views/gestion/index_e.html
@@ -8,36 +8,33 @@
     <br>
     <div class="row">
         <div class="panel col-md-4 text-center">
-          <a href="{{=URL('gestion','laboratorios')}}" class="btn btn-lg btn-block" role="button">
-            <h4>
-                <i class="fa fa-university fa-3x" aria-hidden="true"></i>
-            </h4>
-            <h4>
+          
+          <div class="card card-4" onclick="window.location.href = '{{=URL('gestion','laboratorios')}}'">
+            <h4><i class="fa fa-university fa-5x" aria-hidden="true"></i></h4>
+            <div class="card-block">
                 Gestión de Laboratorios
-            </h4>
-          </a>
+            </div>
+          </div>
         </div>
 
         <div class="panel col-md-4 text-center">
-            <a href="{{=URL('gestion','secciones')}}" class="btn btn-lg btn-block" role="button">
-            <h4>
-                <i class="fa fa-flask fa-3x" aria-hidden="true"></i>
-            </h4>
-            <h4>
+          
+          <div class="card card-4" onclick="window.location.href = '{{=URL('gestion','secciones')}}'">
+            <h4><i class="fa fa-flask fa-5x" aria-hidden="true"></i></h4>
+            <div class="card-block">
                 Gestión de Secciones
-            </h4>
-          </a>
+            </div>
+          </div>
+
         </div>
 
         <div class="panel col-md-4 text-center">
-            <a href="{{=URL('gestion','espacios')}}" class="btn btn-lg btn-block" role="button">
-            <h4>
-                <i class="fa fa-building fa-3x" aria-hidden="true"></i>
-            </h4>
-            <h4>
+          <div class="card card-4" onclick="window.location.href = '{{=URL('gestion','espacios')}}'">
+            <h4><i class="fa fa-building fa-5x" aria-hidden="true"></i></h4>
+            <div class="card-block">
                 Gestión de Espacios Físicos
-            </h4>
-          </a>
+            </div>
+          </div>
         </div>
     </div>
 </div>
