--- a/views/layout.html
+++ b/views/layout.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="{{=URL('static','css/font-awesome.min.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/bootstrap.min.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/web2py-bootstrap3.css')}}"/>
+    <link rel="stylesheet" href="{{=URL('static','css/sigulab.css')}}"/>
     <link rel="shortcut icon" href="{{=URL('static','images/logo-ulab.png')}}" type="image/x-icon">
     <link rel="apple-touch-icon" href="{{=URL('static','images/logo-ulab.png')}}">
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway|Source+Sans+Pro" rel="stylesheet">
