--- a/views/front_page/sustancias.html
+++ b/views/front_page/sustancias.html
@@ -14,25 +14,24 @@
     <div class="row">
 
         <div class="col-sm-4 col-sm-offset-2 text-center">
-            <a href="{{=URL('sustancias','sustanciapeligrosa_manage')}}" class="btn btn-lg btn-block" role="button">
-			    <h4>
-			        <i class="fa fa-list-ol fa-3x" aria-hidden="true"></i>
-			    </h4>
-			    <h4>
-			        Listado Sustancias
-			    </h4>
-		    </a>
+          <div class="card card-4" onclick="window.location.href = '{{=URL('sustancias','sustanciapeligrosa_manage')}}'">
+              <h4><i class="fa fa-list-ol fa-5x" aria-hidden="true"></i></h4>
+            <div class="card-block">
+                Listado Sustancias
+            </div>
+          </div>
 	    </div>
 
         <div class="col-sm-4 text-center">
-            <a href="{{=URL('sustancias','select_inventario')}}" class="btn btn-lg btn-block" role="button">
-			    <h4>
-			        <i class="fa fa-book fa-3x" aria-hidden="true"></i>
-			    </h4>
-			    <h4>
-			        Inventario
-			    </h4>
-		    </a>
+
+          <div class="card card-4" onclick="window.location.href = '{{=URL('sustancias','select_inventario')}}'">
+              <h4><i class="fa fa-book fa-5x" aria-hidden="true"></i></h4>
+            <div class="card-block">
+                Inventario
+            </div>
+          </div>
+
+           
         </div>
     </div>
 </div>
