--- a/static/css/web2py-bootstrap3.css
+++ b/static/css/web2py-bootstrap3.css
@@ -367,7 +367,7 @@ input#auth_user_remember_me.boolean{
   transform: translateY(3px);
 }
 .dropdown-toggle{
-  /*border-radius: 5px;*/
+  border-radius: 5px;
   margin: 1%;
   color: blue;
 }
@@ -445,10 +445,20 @@ div.navbar-collapse{
     }
 }
 
+form.form-horizontal.web2py_form .form-group label{
+  padding-left: 30px;
+}
+
 form.form-horizontal.web2py_form .form-group div{
   transform: translateY(12px);
   font-size: 150%;
 }
+
+form.form-horizontal.web2py_form .form-group div.col-sm-9{
+  transform: translateY(12px);
+  font-size: 120%;
+}
+
 form.form-horizontal.web2py_form .form-group div.error{
   transform: none;
   font-size: 50%;
@@ -481,7 +491,10 @@ input{
 .btn-danger{
   font-size: 50%;
 }
-input.btn.btn-primary.btn-lg{
+div.col-sm-9 input.btn.btn-primary.btn-lg{
   font-size: 80%;
   margin-bottom: 20px;
+}
+.navbar-default{
+  border-bottom: solid thick #455A64
 }
