--- a/views/reportes/select_fecha.html
+++ b/views/reportes/select_fecha.html
@@ -1,5 +1,12 @@
 {{extend 'layout.html'}}
-<div class="container style="background-color:#E0F2F1">
+<div class="container">
+
+<h1 style="color:#455A64" class="text-center">Generación de Reportes RL4</h1>
+
+<br>
+<br>
+<br>
+
 <p>{{=table}}</p>
 
 </div>
