--- a/views/solicitud/select_solicitud.html
+++ b/views/solicitud/select_solicitud.html
@@ -3,45 +3,54 @@
 <div class="container">
 	<ol class="breadcrumb">
 	  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
-	  <li class="breadcrumb-item active">Solicitud</li>
+	{{if funcion=='1':}}
+	  <li class="breadcrumb-item active">Mis Solicitudes</li>
+	{{elif funcion=='2':}}
+	  <li class="breadcrumb-item active">Solicitudes Recibidas</li>
+	{{elif funcion=='3':}}
+	  <li class="breadcrumb-item active">Préstamos</li>
+	{{elif funcion=='4':}}
+	  <li class="breadcrumb-item active">Deudas</li>
+	{{pass}}
 	</ol>
 
-{{if funcion=='1':}}
-<h2>Mis solicitudes</h2>
-{{elif funcion=='2':}}
-<h2>Solicitudes Recibidas</h2>
-{{elif funcion=='3':}}
-<h2>Préstamos</h2>
-{{elif funcion=='4':}}
-<h2>Deudas</h2>
+{{if table:}}
+{{=table}}
 {{pass}}
 
 <p>{{str(auth.has_membership('Técnico'))}}</p>
 {{if espacios:}}
   <br>
 
-    <div class="col-sm-4 text-center">
-		<div class="breadcrumb">
-			<h4><i class="fa fa-industry fa-5x" aria-hidden="true"></i></h4>
-			<div class="card-block">
-			    <h4>Espacios Fisicos</h4>
-			</div>
-		</div>
-		{{if espacios:}}
+  {{if espacios:}}
 
+  <div class="row">
+    <div class="col-sm-12 text-center">
+		    <div class="breadcrumb" style="background-color:transparent;">
+
+			       <h4><i class="fa fa-industry fa-5x" aria-hidden="true"></i></h4>
+
+             <div class="card-block">
+			            <h4>Espacios Fisicos</h4>
+			       </div>
+        </div>
+		</div>
+  </div>
+
+    <div class="container">
 		{{for espacio in espacios:}}
-		<div class="breadcrumb" style="padding:0px;border:none;">
-		    <a href="{{=URL('solicitud','tipo_solicitud', vars=dict(esp=espacio.id, f=request.vars['f']))}}" class="btn btn-lg btn-block" role="button">
-	            <h5>
-		            Seccion: {{=str(db(db.t_seccion.id == espacio.f_seccion).select(db.t_seccion.f_seccion))[19:-2]}}, {{=espacio.f_espacio}}
-		        </h5>
-            </a>
-		</div>
-		{{pass}}
-
-
-		{{pass}}
+    <div class="col-sm-3">
+  		<div class="breadcrumb" style="padding:0px;border:none;">
+  		    <a href="{{=URL('solicitud','tipo_solicitud', vars=dict(esp=espacio.id, f=request.vars['f']))}}" class="btn btn-lg btn-block" role="button">
+  	        <h5>Seccion: {{=str(db(db.t_seccion.id == espacio.f_seccion).select(db.t_seccion.f_seccion))[19:-2]}}, {{=espacio.f_espacio}}</h5>
+          </a>
+  		</div>
     </div>
+		{{pass}}
+  </div>
+
+
+		{{pass}}
 </div>
 
 {{else:}}
