--- a/views/gestion/espacios.html
+++ b/views/gestion/espacios.html
@@ -1,13 +1,14 @@
 {{extend 'layout.html'}}
 <div class="container">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
-    <li class="breadcrumb-item"><a href="{{=URL('gestion', 'index_e')}}">Gestión</a></li>
+    <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Inicio</a></li>  
+    <li class="breadcrumb-item"><a href="{{=URL('gestion','secciones')}}">Dependencias</a></li>
     <li class="breadcrumb-item active">Espacios Físicos</li>
   </ol>
 
 <h2>Gestión de Espacios Físicos</h2>
-<p>Desde aquí se pueden editar los diferentes espacios físicos y sus Técnicos o Encargados.</p>
+<p>Desde aquí se pueden editar los diferentes secciones y sus jefes” por “Permite añadir, buscar, editar
+y eliminar los Espacios Físicos bajo la custodia de las Dependencias de la ULAB y sus Responsables.</p>
 <p>{{=form}}</p>
 
 
