--- a/views/gestion/index.html
+++ b/views/gestion/index.html
@@ -1,7 +1,7 @@
 {{extend 'layout.html'}}
 <div class="container">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
+      <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Inicio</a></li>
       <li class="breadcrumb-item active">Gestión</li>
     </ol>
     <h1 align="center" style="color:#455A64"> GESTIÓN DE PERSONAL</h1>
