--- a/views/gestion/index_e.html
+++ b/views/gestion/index_e.html
@@ -1,10 +1,10 @@
 {{extend 'layout.html'}}
 <div class="container">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
+      <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Inicio</a></li>
       <li class="breadcrumb-item active">Gestión</li>
     </ol>
-    <h1 align="center" style="color:#455A64"> GESTIÓN DE ESPACIOS</h1>
+    <h1 align="center" style="color:#455A64"> GESTIÓN DE DEPENDENCIAS</h1>
     <br>
     <div class="row">
         <div class="panel col-md-4 text-center">
@@ -13,7 +13,7 @@
                 <i class="fa fa-stethoscope fa-5x" aria-hidden="true"></i>
             </h4>
             <h4>
-                Gestión de Laboratorios
+                Gestión de Unidades
             </h4>
           </a>
         </div>
@@ -24,7 +24,7 @@
                 <i class="fa fa-flask fa-5x" aria-hidden="true"></i>
             </h4>
             <h4>
-                Gestión de Secciones
+                Gestión de Dependencias
             </h4>
           </a>
         </div>
