--- a/views/gestion/secciones.html
+++ b/views/gestion/secciones.html
@@ -8,8 +8,7 @@
   </ol>
 <h2>Gestión de Espacios Físicos</h2>
 <h3>Dependencia: {{=secc.f_seccion}}</h3>
-<p>Desde aquí se pueden editar los diferentes secciones y sus jefes” por “Permite añadir, buscar, editar
-y eliminar los Espacios Físicos bajo la custodia de las Dependencias de la ULAB y sus Responsables.</p>
+<p>Permite añadir, buscar, editar y eliminar los Espacios Físicos bajo la custodia de las Dependencias de la ULAB y sus Responsables.</p>
 {{else:}}
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Inicio</a></li>
