--- a/views/gestion/espacios.html
+++ b/views/gestion/espacios.html
@@ -7,8 +7,7 @@
   </ol>
 
 <h2>Gestión de Espacios Físicos</h2>
-<p>Desde aquí se pueden editar los diferentes secciones y sus jefes” por “Permite añadir, buscar, editar
-y eliminar los Espacios Físicos bajo la custodia de las Dependencias de la ULAB y sus Responsables.</p>
+<p>Permite añadir, buscar, editar y eliminar los Espacios Físicos bajo la custodia de las Dependencias de la ULAB y sus Responsables.</p>
 <p>{{=form}}</p>
 
 
