--- a/views/gestion/usuarios.html
+++ b/views/gestion/usuarios.html
@@ -1,7 +1,7 @@
 {{extend 'layout.html'}}
 <div class="container">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
+    <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Inicio</a></li>
     <li class="breadcrumb-item"><a href="{{=URL('gestion', 'index')}}">Gestión</a></li>
     <li class="breadcrumb-item active">Usuarios Registrados</li>
   </ol>
