--- a/views/gestion/espacios.html
+++ b/views/gestion/espacios.html
@@ -9,7 +9,11 @@
 <h2>Gestión de Espacios Físicos</h2>
 <p>Permite añadir, buscar, editar y eliminar los Espacios Físicos bajo la custodia de las Dependencias de la ULAB y sus Responsables.</p>
 <p>{{=form}}</p>
-
+{{ if "t_tecs_esp.f_espaciofisico" in request.args:}}
+<a href="{{=URL('gestion','espacios')}}">
+  <button class="btn btn-default"><span class="icon leftarrow icon-arrow-left glyphicon glyphicon-arrow-left"></span> Atrás</button>
+</a>
+{{pass}}
 
 {{if 'new' in request.args or 'edit' in request.args:}}
 <p class="help-block center">Los campos marcados con (*) son obligatorios</p>
