--- a/views/gestion/laboratorios.html
+++ b/views/gestion/laboratorios.html
@@ -9,6 +9,10 @@
 <h2>Gestión de Dependencias</h2>
 <h3>Unidad de Adscripción: {{=lab.f_nombre}}</h3>
 <p>Permite añadir, buscar, editar y eliminar las Dependencias de la ULAB y sus Responsables.</p>
+<p>{{=form}}</p>
+<a href="{{=URL('gestion','laboratorios')}}">
+  <button class="btn btn-default"><span class="icon leftarrow icon-arrow-left glyphicon glyphicon-arrow-left"></span> Atrás</button>
+</a>
 {{else:}}
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Inicio</a></li>
@@ -17,8 +21,9 @@
 <h2>Gestión de Unidades de Adscripción</h2>
 <p>Permite añadir, buscar, editar
 y eliminar las diferentes Unidades de Adscripción de la ULAB y sus Responsables.</p>
-{{pass}}
 <p>{{=form}}</p>
+{{pass}}
+
 
 
 {{if 'new' in request.args or 'edit' in request.args:}}
