--- a/views/gestion/secciones.html
+++ b/views/gestion/secciones.html
@@ -9,6 +9,10 @@
 <h2>Gestión de Espacios Físicos</h2>
 <h3>Dependencia: {{=secc.f_seccion}}</h3>
 <p>Permite añadir, buscar, editar y eliminar los Espacios Físicos bajo la custodia de las Dependencias de la ULAB y sus Responsables.</p>
+<p>{{=form}}</p>
+<a href="{{=URL('gestion','secciones')}}">
+  <button class="btn btn-default"><span class="icon leftarrow icon-arrow-left glyphicon glyphicon-arrow-left"></span> Atrás</button>
+</a>
 {{else:}}
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Inicio</a></li>
@@ -18,9 +22,8 @@
 
 <h2>Gestión de Dependencias</h2>
 <p>Permite añadir, buscar, editar y eliminar las Dependencias de la ULAB y sus Responsables.</p>
-{{pass}}
 <p>{{=form}}</p>
-
+{{pass}}
 
 {{if 'new' in request.args or 'edit' in request.args:}}
 <p class="help-block center">Los campos marcados con (*) son obligatorios</p>
