--- a/views/front_page/sustancias.html
+++ b/views/front_page/sustancias.html
@@ -4,7 +4,7 @@
   or auth.has_membership('Jefe de Laboratorio') \
   or auth.has_membership('Jefe de Sección') \
   or auth.has_membership('Técnico')\
-  or auth.has_membership('Gestor de Sustancias'):}}
+  or auth.has_membership('Gestor de SMyDP'):}}
 <div class="container">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
