--- a/views/sustancias/select_inventario.html
+++ b/views/sustancias/select_inventario.html
@@ -3,8 +3,8 @@
 <div class="container">
 
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
-        <li class="breadcrumb-item"><a href="{{=URL('front_page','sustancias')}}">Sustancias</a></li>
+        <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Inicio</a></li>
+        <li class="breadcrumb-item"><a href="{{=URL('front_page','sustancias')}}">SMyDP</a></li>
         <li class="breadcrumb-item active">Inventario</li>
     </ol>
 
