--- a/views/sustancias/sustanciapeligrosa_manage.html
+++ b/views/sustancias/sustanciapeligrosa_manage.html
@@ -1,13 +1,24 @@
 {{extend 'layout.html'}}
 <div class="container">
-
+{{ if 'edit' in request.args:}}
 	<div>
 		<ol class="breadcrumb">
-		  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Home</a></li>
-		  <li class="breadcrumb-item"><a href="{{=URL('front_page','sustancias')}}">Sustancias</a></li>
-		  <li class="breadcrumb-item active">Listado de sustancias</li>
+		  <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Inicio</a></li>
+		  <li class="breadcrumb-item"><a href="{{=URL('front_page','sustancias')}}">SMyDP</a></li>
+		  <li class="breadcrumb-item"><a href="{{=URL('sustancias','sustanciapeligrosa_manage')}}">Listado de sustancias</a></li>
+      <li class="breadcrumb-item active">Editar</li>
 		</ol>
 	</div>
+  {{ elif 'new' in request.args:}}
+  <div>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="{{=URL('front_page','index')}}">Inicio</a></li>
+      <li class="breadcrumb-item"><a href="{{=URL('front_page','sustancias')}}">SMyDP</a></li>
+      <li class="breadcrumb-item"><a href="{{=URL('sustancias','sustanciapeligrosa_manage')}}">Listado de sustancias</a></li>
+      <li class="breadcrumb-item active">Añadir</li>
+    </ol>
+  </div>
+  {{pass}}
 
 	<br>
 
