--- a/views/solicitud/select_solicitud.html
+++ b/views/solicitud/select_solicitud.html
@@ -13,7 +13,15 @@
 	  <li class="breadcrumb-item active">Deudas</li>
 	{{pass}}
 	</ol>
-
+{{if request.vars.f == '3':}} 
+<h1 style="text-align:center;">Préstamos</h1>
+{{elif request.vars.f == '2':}}
+<h1 style="text-align:center;">Solicitudes Recibidas</h1>
+{{elif request.vars.f == '4':}}
+<h1 style="text-align:center;">Deudas</h1>
+{{else:}}
+<h1 style="text-align:center;">Mis Solicitudes</h1>
+{{pass}}
 {{if table:}}
 {{=table}}
 {{pass}}
